fixed little height and alignment issues

--- a/app.css
+++ b/app.css
@@ -30,7 +30,11 @@ body {
     -webkit-font-smoothing: antialiased;
     font-family: 'Poppins', sans-serif;
     background-color: #f2f2f2;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
 /* 5. Improve media defaults */
@@ -155,7 +159,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-@media screen and (min-width: 375px) and (max-width: 428px) {
+@media screen and (min-width: 375px) and (max-width: 768px) {
 
     .headerText {
         font-size: 1.5em;
